# seduce

./: .gitmodules  AUTHORS  ChangeLog  Makefile.am  README  autogen.sh  config.h.in  configure  configure.ac
agent/: Makefile  Makefile.am  agent.c  agent.conf  agent.h  alert.c  alert.h  base64.c  base64.h  config.h  copy-lib.sh  detect_engine.c  detect_engine.h  detect_engine_dummy.c  detect_engine_fnord.c  detect_engine_libemu.c  detect_engine_opty2.c  detect_engine_opty2.py  detect_engine_python.c  detect_engine_qemu.c  detect_engine_qemu.h  detection_engine.c  detection_engine_dummy.c  detection_engine_fnord.c  detection_engine_libemu.c  detection_engine_pyml.c  detection_engine_pyopty2.c  detection_engine_pyopty2.py  detection_engine_qemu.c  detection_engine_unicorn_linux_x86_64.c  detection_engine_unicorn_windows_x86.c  detection_engine_unicorn_x86_64.c  detection_engine_yara.c  item_selection.c  item_selection.h  libemu_shellcode.patch  manager_protocol.h  options.c  options.h  py_fnord.py  (+14 more)
agent/DLL/: .gitattributes
agent/behaviour/: download_models.sh  requirements.txt
agent/behaviour/core/: config.py
agent/behavour/: main.py
agent/behavour/pipeline/: process_pipe.py
agent/libemu/: configure.ac  libemu.pc.in
agent/libemu/src/: emu_shellcode.c
agent/libqemu-0.9.0/: Makefile  Makefile.target  configure  configure.gnu  cpu-all.h  cpu-exec.c  exec.c
agent/libqemu-0.9.0/i386-linux-user/: opc.h
agent/libqemu-0.9.0/linux-user/: main.c  seduce.h  signal.c  syscall.c
agent/libqemu-0.9.0/target-i386/: cpu.h  helper.c  translate.c
agent/payloads/: 150fores  150fores-linux32  junk-150-shikata-win32  linux32-execve.as  yara-log4j
agent/qemu-0.12.4/: Makefile.target  configure  configure.gnu  cpu-exec.c
agent/qemu-0.12.4/linux-user/: linuxload.c  main.c  rawload.c  seduce.h  signal.c  strace.c  syscall.c
agent/qemu-0.12.4/target-i386/: op_helper.c
agent/shellcode/: .gitattributes  linux32-connectback  linux32-hello.S  x86-nopsled-singlebyte
agent/shellcodes/: linux-x64-shell-bind-tcp  linux-x64-shell-bind-tcp-5-times-zutto-dekiru  opty2Shell
agent/windows_helper_functions/: create_GDT.c  create_LDR_Module.c  create_PEB_TEB.c  setup_PEB_LDR.c  windows_LDR_struct_Modules.h
agent/yara/: expl_log4j_cve_2021_44228.yar  yara_rules.yar
contrib/: Makefile.unicorn
linux-user/: qemu.h
manager/: Makefile  agent_contact.c  agent_contact.h  alert.c  alert.h  alert_recv.c  data.c  data.h  hash.h  job.c  manager.c  manager.conf  manager.h  oom_handler.c  options.c  options.h  sensor_contact.c  sensor_contact.h  utils.c  utils.h
scheduler/: .agent_contact.c.swp  .sensor_contact.c.swp  Makefile  agent_contact.c  agent_contact.h  alert.c  data.c  data.h  errors.h  hash.c  job.c  job.h  oom_handler.c  options.c  scheduler.c  scheduler.conf  sensor_contact.c  thread.h  utils.h
seduce/branches/3-layer-arch/manager/: alert.h  thread.c
seduce/branches/3-layer-arch/sensor/: Makefile  sensor.c
seduce/branches/3-tier-arch/agent/: agent.h  config.txt  error.h
seduce/branches/3-tier-arch/manager/: job.c  options.c
seduce/branches/3-tier-arch/sensor/: options.c  sensor.c  server_contact.h
seduce/branches/python-opty2/agent/: Makefile  agent.conf  detect_engine.c  detect_engine_fnord.c  detect_engine_opty2.c  detect_engine_opty2.py  detect_engine_python.c  md5.c  options.c  options.h  opty2values.py  py_fnord.py  sensor_contact.h
seduce/branches/python-opty2/sensor/: agent_contact.c  agent_contact.h  alert_recv.h  chksum_ctl.c  data.c  hash.c  oom_handler.c  options.h  sensor.c  sensor.h  sensor_contact.h  sniffer.c  sniffer.h  thread.h  utils.h
seduce/branches/python-opty2/trunk/: README
seduce/branches/skalkoto-temp/agent/: error.c  options.c
seduce/branches/skalkoto-temp/manager/: Makefile  agent_contact.c  alert_recv.c  data.c  data.h  hash.c  manager.c  manager.h  oom_handler.c  options.c  options.h  sensor_contact.c
seduce/branches/skalkoto-temp/sensor/: Makefile  options.c  sniffer.c  (+1 more)
seduce/trunc/: config.h
seduce/trunk/: AUTHORS  Makefile.am  README  config.h  configure.ac
seduce/trunk/agent/: Makefile  Makefile.agent  Makefile.am  agent.c  agent.conf  agent.h  alert.c  alert.h  detect_engine.c  detect_engine.h  detect_engine_dummy.c  detect_engine_fnord.c  detect_engine_libemu.h  detect_engine_qemu.c  detect_engine_qemu.h  detect_engine_qemu_old.c  detection_engine.c  detection_engine.h  detection_engine_dummy.c  detection_engine_fnord.c  detection_engine_pyopty2.c  detection_engine_qemu.c  dummy_detect_engine.c  dummy_engine.c  item_selection.c  manager_protocol.c  options.c  options.h  opty2values.py  qemu_detect_engine.c  qemu_detect_engine.h  seduce.c  sensor_contact.c  server_contact.c  server_contact.h  standalone.c  utils.c  worker.c
seduce/trunk/agent/libqemu-0.9.0/: cpu-exec.c
seduce/trunk/agent/libqemu-0.9.0/linux-user/: main.c  signal.c
seduce/trunk/agent/libqemu-0.9.0/target-i386/: op.c
seduce/trunk/agent/qemu-0.12.4/: Makefile  Makefile.target  configure.gnu  exec.c
seduce/trunk/agent/qemu-0.12.4/linux-user/: linuxload.c  main.c  qemu.h
seduce/trunk/manager/: Makefile  agent_contact.c  agent_contact.h  alert.h  alert_recv.c  data.c  data.h  hash.h  job.h  manager.c  manager.conf  oom_handler.c  options.c  sensor_contact.c  utils.c  utils.h
seduce/trunk/scheduler/: Makefile  agent_contact.c  agent_contact.h  alert.h  data.c  data.h  errors.h  job.c  oom_handler.c  oom_handler.h  options.c  scheduler.c  sensor_contact.c
seduce/trunk/sensor/: Makefile  agent_contact.c  agent_contact.h  alert.c  data.c  data.h  debug.h  oom_handler.c  options.c  parser.c  sensor.c  sensor.conf  sensor.h  sensor_contact.c  server_contact.c  server_contact.h  signal_waiter.c  thread.c  utils.h
sensor/: Makefile  Makefile.am  agent_contact.c  alert.c  alert_recv.c  chksum_ctl.c  data.h  data_group.c  data_group.h  debug.h  errors.h  hash.h  oom_handler.c  options.c  parser.c  sensor.c  sensor.conf  sensor.h  sensor_contact.c  server_contact.c  server_contact.h  signal_waiter.c  sniffer.c  utils.c
target-i386/: cpu.h  translate.c
(+48 files in other folders)
